# ChangeLog for media-sound/samplv1
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-9999.ebuild:
  Make sure configure finds qt.
  Update mime database.

*samplv1-0.3.3 (31 May 2013)

  31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +samplv1-0.3.3.ebuild:
  Version bump.

  05 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2-r1.ebuild, samplv1-9999.ebuild:
  Restrict mirror.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-9999.ebuild:
  Require jack or lv2 to be enabled.
  Only require midi (alsa or jackmidi) support if jack is built.

*samplv1-0.3.2-r1 (04 May 2013)

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2.ebuild, +samplv1-0.3.2-r1.ebuild, samplv1-9999.ebuild,
  metadata.xml:
  Only raw text in HOMEPAGE.
  Declare AUTOTOOLS_AUTORECONF before inherit.
  Add more USE flags.
  Remove redundant DOCS variable.
  Use qt4-r2 eclass to respect common variables.

  08 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  samplv1-0.3.2.ebuild, samplv1-9999.ebuild:
  modify depends x11-libs/qt-* -> dev-qt/qt*

*samplv1-0.3.2 (01 Mar 2013)

  01 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -samplv1-0.3.1.ebuild, +samplv1-0.3.2.ebuild:
  Version bump.

*samplv1-9999 (16 Feb 2013)
*samplv1-0.3.1 (16 Feb 2013)

  16 Feb 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +samplv1-0.3.1.ebuild, +samplv1-9999.ebuild, +metadata.xml:
  Initial ebuild.
