@@ -1,8 +1,7 @@
-DIST samplv1-0.3.2.tar.gz 121776 SHA256 f5ac8d159b4a349179c023e62a6bced4a302e045f35c60d8d4d0ebb6b81fd8c8 SHA512 91878cadb6ec1effe3744c738cacb3afd11f153cb8c6b9f7a15adb2e46e5170f74aeec04ce4b369a30551b7e4d33f96909be3efeb429888ce6216437524e67cd WHIRLPOOL dc3ae3c7918c7749711dda157fe642116ca39be55bba488797f6855fa29921a2f05df39e2246d5c77e3f42c3800a133b2454c80dc7dbe55068097e0f91c2b321
 DIST samplv1-0.3.3.tar.gz 130957 SHA256 00b199ed24e160763fb10a36942b8e79cbeabe861efe54b33a08bb21e5217f21 SHA512 83ae4c0b6f82a38143efb231871232147cd28c47ffbffbc57549efc6043676f9b4d43e90c71a8211c2222dd38bf2e6bb4523d15fd4c6c385feec52d68acffc50 WHIRLPOOL 13142280916f4148b29b7cec0083c4338464c97ed0f3c178a43531713f482eeeb85716f6ef6356c07b5989b769b3d5efb41a093e4104692b27310196a94c1710
-EBUILD samplv1-0.3.2-r1.ebuild 1587 SHA256 97988613ed6c9e54c6ba9ca2c7d5a626ad04611c9c039ddc1cd4540c8804c539 SHA512 f96bc5d9907d84e3ff762c72677bb31cadf30a9fa9f42f3bf8393a362ef22cb071806d556f33b632b9ca301777657eb0aca1c4ed7576c067dc086e7274ced332 WHIRLPOOL 66422abb93f2ea97d81a72f54e4dff0ad2a08e1f247ab7c72eda0f01107c68ffb899bdbea8f1332a6cf08d920ba2ac8ebc5d6500968af6f85b82f3b89d0baba3
-EBUILD samplv1-0.3.2.ebuild 1058 SHA256 88e04ef0a5fd5d2a5178553898084c6ec76f045e874689310c57167230bc9d08 SHA512 859d8ecda15945aa3035c2b52b47f65d1356e48e48aa3841315ac43287266e184165199fd086164d77fbd6abf8e3319f319fd414c216eedde08dfc5fe2fad959 WHIRLPOOL b72beb3704ecc29fe8349689a78da2e5946c451af7bbac683d2ecb7d3668ece5791e0ac0d80e5b7cb09a3dd0dcc787b553967d6f9f161f03189e1dc503dc13d5
+DIST samplv1-0.3.4.tar.gz 193642 SHA256 cb36a0990c52308aeda3e339440c0a9f9d5dd0f1734aec9f00ed21e9f7132977 SHA512 b0374899f8e208e037edad8f333e07f7e9028d958caf0db628d74e413ea11a14d979154d5fb52fd901bfa344483f91117a697af22015bdd89657f1b8206676a9 WHIRLPOOL 30551c21a79313127cb19c3a5213f83599cf855ba0f23d4f5f5e873a696a5da25aeeffb4c348965341ff0b64af0060d4b3e2e638e0f587516da3117444c85eb6
 EBUILD samplv1-0.3.3.ebuild 1638 SHA256 258731b77a0e245bd705285d5df48a9605e629d3437afafa6b318a5673635130 SHA512 5c3116ea45ec7262a07b0170ab2eb1efc446afe0001b2d89e6176f7cd9a06ffde6e2e5bade1e311b9a3fb9767afb3414a97aa429a567a42a21428c5a1e07d99b WHIRLPOOL e7d9a383439f9b3ee2dbbc272c40f1c43f65c02dfa809c77315bd06e6509e5ee66a638aa506ff7470837a7d0e396df157b458dc4aebb26d0a2f9f983381c8b3c
-EBUILD samplv1-9999.ebuild 1810 SHA256 3fcc48be3f374ec4bca64f79bffafbfcd51f0b6e37630a4f44b76c40f782c1df SHA512 b841373b78dc0d451c95fd559b621762099dd2fb85e00b3878eccb67960dc82226e87785ad9b54af1b65b63a858f74ce7e89a5f97f1d6b005df37950da2773c0 WHIRLPOOL e7ccc7853e7f449f36be88dd9cdf7bcb4ca817760ab4603c7f376ceb23dbf2c9a8878fcf7d92c54de264e965e7d67ae6b3fc62e13300db1154ba270b563ed1a4
-MISC ChangeLog 1613 SHA256 424296f4e50fda8ed82ca907a034ca2c065fe41bcc83a0c4830a23268a00b6b3 SHA512 55de3594e89d614951357326acb2cb1c29832db306d54764b1016a42ece3d5df663e5debfc558858e6e2c3472d5b75aaf94cd23720e94e2ac28df07e3f19ccf8 WHIRLPOOL cbd1945204a366d146cde5bd71a282a676c9c850148b52e2ccbe152c7afe024569ef2b51018a163e4e4128007b63479152784a7dc20974fe861aa51cd09b4257
+EBUILD samplv1-0.3.4.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
+EBUILD samplv1-9999.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
+MISC ChangeLog 1864 SHA256 0f39d107fe6c2ed555a1df59fa6f4745fe754c9775f8c8e2bbf1a7d2baec3f38 SHA512 3d9e939085c919fd6e56ec02a97be66a2c6f3c7fc562c9da2d640df37fb2eb454eb65476deede5d827aabf9e31da1602a3eff3a50af83a10fc0a3d0b61ecf45a WHIRLPOOL f14cd81e368e6676abd9f9a1e7fa2c2eb9c6fd3635ad125e374d407944efab495daba615b4628d5bd1125089b43dd052eae64f100847fea45a4ba921e9529461
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
