@@ -7,7 +7,7 @@ EAPI="5"
 [[ "${PV}" = "9999" ]] && inherit subversion
 
 [[ "${PV}" = "9999" ]] && AUTOTOOLS_AUTORECONF="1"
-inherit base fdo-mime flag-o-matic qt4-r2 autotools-utils
+inherit base fdo-mime qt4-r2 autotools-utils
 
 DESCRIPTION="An old-school all-digital polyphonic sampler synthesizer with stereo fx."
 HOMEPAGE="http://samplv1.sourceforge.net/"
@@ -63,8 +63,6 @@ src_configure() {
 		$(use_enable osc liblo)
 		$(use_enable nsm)
 	)
-
-	append-cppflags -I"${EPREFIX}"/usr/include/qt4
 
 	autotools-utils_src_configure
 }
